# heart-rate-monitor

./: .gitattributes  .gitignore  Dockerfile  Kconfig  README.md  docker-entrypoint.sh
.github/workflows/: build-using-docker.yml  ci.yml
app/: CMakeLists.txt  Kconfig  VERSION  pm_static.yml  prj.conf  sample.yaml  sysbuild.conf
app/boards/: nrf52840dk_nrf52840.overlay
app/src/: main.c
app/sysbuild/: mcuboot.conf
include/lib/: xd58c.h
lib/: CMakeLists.txt
lib/xd58c/: CMakeLists.txt  Kconfig  xd58c.c
scripts/: ppg_data.ods  ppg_monitor.py  ppg_realtime.py  ppg_recordings.ods
tests/: CMakeLists.txt
tests/xd58c/: CMakeLists.txt  prj.conf  testcase.yaml  xd58c_test.c
